--- a/someoutstandingwebs/css/css/theme.css
+++ b/someoutstandingwebs/css/css/theme.css
@@ -1,6 +1,6 @@
 :root {
     /* Custom color palette */
-    --background: hsla(209, 12%, 22%, 1); /* #fee9a6 */
+    --background: hsla(209, 12%, 22%, 1); /* #323B42 */
     --foreground: hsla(50, 25%, 98%, 1); /* #FCFBF9 */
 
     --card: hsla(24, 29%, 80%, 1); /* #D9C7BE */
