--- a/someoutstandingwebs/css/css/theme.css
+++ b/someoutstandingwebs/css/css/theme.css
@@ -1,7 +1,8 @@
 :root {
     /* Custom color palette */
-    --background: hsla(209, 12%, 22%, 1); /* #323B42 */
-    --foreground: hsla(50, 25%, 98%, 1); /* #FCFBF9 */
+    
+    --background: hsla(339, 85%, 92%, 1); /* #FCD9e5 */
+    --foreground: hsla(343, 87%, 58%, 1); /* #F1396D */
 
     --card: hsla(24, 29%, 80%, 1); /* #D9C7BE */
     --card-foreground: hsla(209, 12%, 22%, 1); /* #323B42 */
