--- a/profe/css/css/base.css
+++ b/profe/css/css/base.css
@@ -1,152 +1,307 @@
-/* Basic reset for consistent margins and paddings */
-           
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+:root {
+  /* Set the CSS variable based on an estimated height */
+  --header-height: 80px;
+  --footer-height: 68px;
+
+  --text-xs: clamp(0.875rem, 1vw + 0.5rem, 1.2rem);
+  --text-base: clamp(1rem, 2vw + 1rem, 2rem);
+  --text-lg: clamp(1.25rem, 2.5vw + 1.25rem, 2.5rem);
+  --text-xl: clamp(1.5rem, 3vw + 1rem, 3rem);
+  --text-2xl: clamp(2rem, 4vw + 1.5rem, 5rem);
+  --text-3xl: clamp(2.5rem, 5vw + 2rem, 6rem);
+
+  /* Line heights set in em are relative to the font size of their immediate container
+     while rem scale with the root font size (default 16px). 
+     This means they scale directly with the font size, ensuring proportional spacing within elements. */
+
+  --line-height-xs: clamp(1.2em, 1vw + 1.2em, 1.4em);
+  --line-height-base: clamp(1.4em, 1.5vw + 1.4em, 1.6em);
+  --line-height-lg: clamp(1.5em, 1.8vw + 1.5em, 1.8em);
+  --line-height-xl: clamp(1.6em, 2vw + 1.6em, 1.9em);
+  --line-height-2xl: clamp(1.8em, 2.5vw + 1.8em, 2.2em);
+  --line-height-3xl: clamp(2em, 3vw + 2em, 2.5em);
+
+}
+
+/* All elements (and their pseudo-elements) are sized so that
+   padding and borders don’t add to the element’s total size. */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  overflow: hidden;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    min-height: 100vh;
-    background-color: var(--background);
-    color: var(--foreground);
-    display: flex;
-    flex-direction: column; /* Arrange items in a column */
-    justify-content: center;
-    align-items: center;
+  font-family: 'Helvetica Neue', sans-serif;
+  min-height: 100vh;
+  background-color: var(--background);
+  color: var(--secondary-foreground);
+  justify-content: center;
+  align-items: center;
+  font-size: var(--text-base);
+  /* scale the font size smoothly between 1rem (small screens) and 2rem (large desktops), with a dynamic adjustment in between. */
+  line-height: var(--line-height-base);
+  /* Responsive line height */
 }
 
-
-/*  When the body has display: flex;, 
+/*  When the body has display: flex;
     its children (header, footer, and main) become flex items. 
     Flex items do not expand to fill their container's width
     unless you explicitly set their width.
 */
 
 main {
-    width: 100%; /* Make sure it takes full width */
-    flex: 1; /* Allow it to grow within the flex container */
+  display: grid;
+  grid-template-columns: 1fr;
+  /* One column taking full width */
+  grid-template-rows: 1fr;
+  /* One rows, each taking full height */
+  height: calc(100vh - var(--header-height) - var(--footer-height));
+  /* The viewport minus the header and footer heights */
+  width: 100%;
+  /* Full width */
+  gap: 1rem;
+  /* Optional, adds space between rows/columns */
+  position: fixed;
+  /* Fixed positioning */
+  top: var(--header-height);
+  /* Position it below the header */
+  left: 0;
+  /* Ensure it's aligned to the left */
+  right: 0;
+  /* Ensure it's aligned to the right */
+  overflow-y: auto;
+  /* Enable scrolling for content */
+  scroll-snap-type: y mandatory;
+  /* Enable snapping in the vertical direction */
+  scroll-behavior: smooth;
+  /* Enable smooth scrolling */
 }
 
 header,
 footer {
-    background-color: var(--secondary);
-    color: var(--secondary-foreground);
-    padding: 20px;
-    gap: 10px;
-    width: 100%; /* Make the header and footer take full width */
+  display: flex;
+  align-items: center;
+  position: fixed;
+  background-color: var(--secondary);
+  color: var(--secondary-foreground);
+  gap: 10px;
+  width: 100%;
+  z-index: 10;
+}
+
+footer {
+  bottom: 0;
+  width: 100%;
+  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
+  height: var(--footer-height);
 }
 
 header {
-    margin-bottom: 30px;
-    padding: 20px 40px;
-    background-color: var(--secondary);
+  top: 0;
+  width: 100%;
+  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
+  height: var(--header-height);
 }
 
 header div,
 footer div {
-    background-color: var(--primary);
-    padding: 10px;
-    text-align: center;
-    display: block;
+  background-color: var(--primar-backgroundy);
+  padding: 10px;
+  text-align: center;
+  display: block;
 }
 
+/* Headings */
+h1 {
+  color: var(--foreground);
+  font-size: var(--text-2xl);
+  /* Very large display text (Hero headers) */
+  line-height: var(--line-height-2xl);
+  /* Responsive line height */
+  margin-bottom: 1rem;
+  font-weight: 900;
+}
 
-h1,
-h2,
-h3,
+h2 {
+  font-family: 'OCR-A';
+  color: var(--primary-foreground);
+  font-size: var(--text-xl);
+  /* Large text for main headings */
+  line-height: var(--line-height-xl);
+  /* Responsive line height */
+  margin-bottom: 0.75rem;
+  font-weight: 700;
+}
+
+h3 {
+  color: var(--destructive);
+  font-size: var(--text-lg);
+  /* Medium heading text */
+  line-height: var(--line-height-lg);
+  /* Responsive line height */
+  margin-bottom: 0.75rem;
+  font-weight: 500;
+}
+
 h4 {
-    color: var(--destructive);
+  font-size: var(--text-base);
+  font-weight: 300;
 }
 
+/* Small Text (e.g., captions or footnotes) */
+.small-text {
+  font-size: var(--text-xs);
+  line-height: var(--line-height-xs);
+  font-weight: 100;
+}
+
+/* Links */
 a {
-    color: var(--muted-foreground);
+  font-size: var(--text-base);
+  /* Same as body text for readability */
+  line-height: var(--line-height-base);
+  /* Responsive line height for links */
+  text-decoration: none;
+  color: var(--muted-foreground);
 }
 
 article {
-    margin-bottom: 40px;
-    background-color: var(--accent);
-    padding: 20px 40px;
-    border-radius: 10px;
-    color: var(--destructive);
+  margin-bottom: 40px;
+  background-color: var(--accent);
+  padding: 20px 40px;
+  border-radius: 10px;
+  color: var(--destructive);
 }
 
 blockquote {
-    background-color: var(--foreground);
-    border-left: 10px solid var(--muted);
-    margin: 20px 0;
-    padding: 10px 20px;
+  background-color: var(--foreground);
+  border-left: 10px solid var(--muted);
+  margin: 20px 0;
+  padding: 10px 20px;
 }
 
 cite {
-    display: block;
-    margin-top: 10px;
-    font-size: 0.9em;
-    color: var(--primary);
+  display: block;
+  margin-top: 10px;
+  font-size: var(--text-base);
+  color: var(--primary);
 }
 
 p {
-    margin: 15px 0;
-    line-height: 1.8;
+  font-family: 'OCR-B';
+  font-size: var(--text-base);
+  /* Smaller text for body paragraphs */
+  line-height: var(--line-height-base);
+  /* Responsive line height */
+  margin-bottom: 1rem;
 }
 
 .highlight {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .header-container h1 {
-    font-size: 2.5em;
-    color: var(--destructive);
-    margin: 0;
-    padding-bottom: 20px;
+  color: var(--destructive);
+  margin: 0;
+  padding-bottom: 20px;
 }
 
 .image-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .image-container img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .toc {
-    text-align: center;
-    margin: 20px 0;
+  text-align: center;
+  margin: 20px 0;
 }
 
 .toc a {
-    margin: 0 10px;
-    padding: 10px 20px;
-    background-color: var(--muted);
-    border-radius: 5px;
-    color: var(--foreground);
-    text-decoration: none;
+  margin: 0 10px;
+  padding: 10px 20px;
+  background-color: var(--muted);
+  border-radius: 5px;
+  color: var(--foreground);
+  text-decoration: none;
 }
 
 .toc a:hover {
-    background-color: var(--primary);
+  background-color: var(--primary);
 }
 
 .final-section {
-    text-align: center;
-    padding: 40px 20px;
-    background-color: var(--muted);
-    color: var(--foreground);
+  text-align: center;
+  padding: 40px 20px;
+  background-color: var(--muted);
+  color: var(--foreground);
 }
 
 .final-section a {
-    display: block;
-    margin: 10px 0;
-    color: var(--foreground);
-    text-decoration: none;
-    font-weight: bold;
+  display: block;
+  margin: 10px 0;
+  color: var(--foreground);
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .final-section a:hover {
-    color: var(--accent);
+  color: var(--accent);
+}
+
+/* Style the pre element */
+pre {
+  background: #333;
+  color: #f8f8f2;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 0;
+  overflow: auto;
+  white-space: pre-wrap;
+}
+
+/* Code Container Styling */
+.code-container {
+  display: flex;
+  background-color: #333;
+  color: #f8f8f2;
+  border-radius: 8px;
+  padding: 0.75rem;
+  white-space: pre-wrap;
+  overflow-x: auto;
+  cursor: text;
+  user-select: text;
+  box-sizing: border-box;
+}
+
+.code-content {
+  font-family: monospace;
+  white-space: pre-wrap;
+}
+
+.collection-title {
+  font-variant-caps: all-small-caps;
+}
+
+.responsive-image {
+  width: 100%;
+  /* Full width of the container */
+  height: 100%;
+  /* Full height of the container */
+  object-fit: cover;
+  /* Ensures image covers container without changing aspect ratio */
+  object-position: center;
+  /* Centers the image within the container */
 }
