--- a/profe/css/css/media-queries.css
+++ b/profe/css/css/media-queries.css
@@ -4,48 +4,125 @@
   https://www.w3.org/TR/mediaqueries-3/
 */
 
+/* Mobile Portrait */
+@media only screen and (max-width: 600px) and (orientation: portrait) {}
+.responsive-image {
+	transform: rotate(90deg);
+}
+/* EndOf MobilePortrait */
+
+/* Mobile Landscape */
+@media only screen and (max-width: 800px) and (orientation: landscape) {}
+
+/* Tablet Portrait */
+@media only screen and (min-width: 601px) and (max-width: 1200px) and (orientation: portrait) {
+	.responsive-image {
+        transform: rotate(90deg);
+    }
+
+	/* Navbar */
+	.nav-menu {
+		display: none;
+		/* Hide hamburger icon on desktop */
+	}
+
+	header .nav-items {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
+		position: static;
+	}
+
+	header .nav-items li {
+		border: none;
+	}
+
+	header .nav-items li a {
+		padding: 20px 30px;
+	}
+
+	/* EndOf Navbar */
+}
+
+/* Tablet Landscape */
+@media only screen and (min-width: 801px) and (max-width: 1200px) and (orientation: landscape) {
 
 
+	/* Navbar */
+	.nav-menu {
+		display: none;
+		/* Hide hamburger icon on desktop */
+	}
 
-  /* Mobile Portrait */
-  @media only screen and (max-width: 600px) and (orientation: portrait) {
-    body {
-      font-size: 1rem;
-    }
-  }
-  
-  /* Mobile Landscape */
-  @media only screen and (max-width: 800px) and (orientation: landscape) {
-    body {
-      font-size: 1.2rem;
-    }
-  }
-  
-  /* Tablet Portrait */
-  @media only screen and (min-width: 601px) and (max-width: 900px) and (orientation: portrait) {
-    body {
-      font-size: 1.4rem;
-    }
-  }
-  
-  /* Tablet Landscape */
-  @media only screen and (min-width: 801px) and (max-width: 1200px) and (orientation: landscape) {
-    body {
-      font-size: 1.6rem;
-    }
-  }
-  
-  /* Small Desktop */
-  @media only screen and (min-width: 1201px) and (max-width: 1600px) {
-    body {
-      font-size: 1.8rem;
-    }
-  }
-  
-  /* Large Desktop */
-  @media only screen and (min-width: 1601px) {
-    body {
-      font-size: 2rem;
-    }
-  }
-  
+	header .nav-items {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
+		position: static;
+	}
+
+	header .nav-items li {
+		border: none;
+	}
+
+	header .nav-items li a {
+		padding: 20px 30px;
+	}
+
+	/* EndOf Navbar */
+}
+
+/* Small Desktop */
+@media only screen and (min-width: 1201px) and (max-width: 1600px) {
+
+	/* Navbar */
+	.nav-menu {
+		display: none;
+		/* Hide hamburger icon on desktop */
+	}
+
+	header .nav-items {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
+		position: static;
+	}
+
+	header .nav-items li {
+		border: none;
+	}
+
+	header .nav-items li a {
+		padding: 20px 30px;
+	}
+
+	/* EndOf Navbar */
+}
+
+/* Large Desktop */
+@media only screen and (min-width: 1601px) {
+
+
+	/* Navbar */
+	.nav-menu {
+		display: none;
+		/* Hide hamburger icon on desktop */
+	}
+
+	header .nav-items {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
+		position: static;
+	}
+
+	header .nav-items li {
+		border: none;
+	}
+
+	header .nav-items li a {
+		padding: 20px 30px;
+	}
+
+	/* EndOf Navbar */
+}
