--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,10 @@
-
+@font-face {
+    font-family: myFirstFont;
+    src: url(../assets/COOPBL.TTF);
+}
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f9; / Fondo suave /
+    font-family: myFirstFont;
+    background-color: #ffdde9; / Fondo suave /
     color: #333;
     margin: 0;
     padding: 20px;
@@ -19,7 +22,7 @@ body {
 
 
 h1 {
-    color: #3498db; / Color atractivo para el título /
+    color: #7023aa; / Color atractivo para el título /
     font-size: 2.5em;
     text-align: center; / Centrado /
     margin-bottom: 20px;
@@ -55,6 +58,7 @@ a img {
 p {
     line-height: 1.6;
     margin: 15px 0;
+    color: rgb(242, 45, 110);
 }
 
 
