--- a/css/404.css
+++ b/css/404.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height:auto;
+    height:fit-content;
     margin: 0;
 }
 
